--- a/my-ecommerce/package.json
+++ b/my-ecommerce/package.json
@@ -15,7 +15,8 @@
     "postcss": "^8.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-scrollbar-hide": "^4.0.0"
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "use-local-storage-state": "^19.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
